--- a/Remotion/ObjectBinding/Web/Res/Themes/NovaBlue/Html/BocList.css
+++ b/Remotion/ObjectBinding/Web/Res/Themes/NovaBlue/Html/BocList.css
@@ -4,7 +4,7 @@ div.bocList
     display: block;
     position: relative;
     height: 10em;
-    width: 100%; /* give it a value to make bocList scrollable, IE7 is buggy if you don't define height & width */
+    width: 50%; /* give it a value to make bocList scrollable, IE7 is buggy if you don't define height & width */
 }
 
 /* Style applied to the BocList in read-only mode. */
@@ -14,10 +14,8 @@ div.bocList
 
 /*  use JS to apply hasWidth and hasHeight depending on bocList-element on runtime */
 /*  Style applied to the div surrounding the BocList's table when the BocList has a defined width or height.  */
-div.bocList.hasHeight div.bocListTableBlock,
-div.bocList.hasWidth div.bocListTableBlock,
-div.bocList.hasHeight div.bocListTableBlock div.bocListTable,
-div.bocList.hasWidth div.bocListTableBlock div.bocListTable
+div.bocList.hasDimensions div.bocListTableBlock,
+div.bocList.hasDimensions div.bocListTableBlock div.bocListTable
 {
     position: absolute;
     top: 0;
@@ -27,21 +25,18 @@ div.bocList.hasWidth div.bocListTableBlock div.bocListTable
     overflow: auto;
 }
 
-div.bocList.hasHeight div.bocListTableBlock,
-div.bocList.hasWidth div.bocListTableBlock
+div.bocList.hasDimensions div.bocListTableBlock
 {
     right: 10em; /* width of BocList menu block + some space */
 }
 
 /*  Style applied to the div surrounding the BocList's table when the BocList has a defined width or height and a navigation block.  */
-div.bocList.hasHeight div.bocListTableBlock.hasNavigator div.bocListTable,
-div.bocList.hasWidth div.bocListTableBlock.hasNavigator div.bocListTable
+div.bocList.hasDimensions div.bocListTableBlock.hasNavigator div.bocListTable
 {
     bottom: 1.5em;
 }
 
-div.bocList.hasHeight div.bocListNavigator,
-div.bocList.hasWidth div.bocListNavigator
+div.bocList.hasDimensions div.bocListNavigator
 {
     position: absolute;
     bottom: 0;
@@ -123,6 +118,11 @@ th.bocListTitleCell
 {
     white-space: nowrap;
 }
+*:first-child+html th.bocListTitleCell
+{
+    border-bottom-width: 2px;
+}
+
 
 th.bocListTitleCell span
 {
@@ -158,6 +158,12 @@ td.bocListDataCellEven
     border-bottom: 1px solid #002e46;
 
     cursor: default;
+}
+/* IE7 only */
+*:first-child+html td.bocListDataCellOdd,
+*:first-child+html td.bocListDataCellEven
+{
+    position: relative;
 }
 
 /*  Style applied to the cells in the BocList's not-selected odd and even data rows. */
